# DataLab

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.gemini/: settings.json
docs/: usage.md
examples/: example_config.json  generate_sample_data.py
specs/001-datalab-monorepo-spec/: data-model.md  generate_clarifications_qcm.py  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-datalab-monorepo-spec/checklists/: requirements.md
specs/001-datalab-monorepo-spec/contracts/: config_schema.json  export_schema.json
src/datalab/: cli.py
src/datalab/analysis/: plotting.py
src/datalab/backtest/: engine.py
src/datalab/collector/: exchange.py  manager.py
src/datalab/collector/clients/: binance.py  dydx.py  hyperliquid.py
src/datalab/strategy/: base.py
src/datalab/utils/: config.py  storage.py
tests/integration/: test_backtest.py  test_collector.py
tests/unit/: test_alerts.py  test_backtest.py  test_exchange.py  test_manager.py  test_momentum.py
